--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # .env & .env.example
 
-PROJECT_NAME=rpy-quarto-template
+PROJECT_NAME=ai4infra
 
-PROJECT_ROOT=/home/ben/projects/rpy-quarto-template
+PROJECT_ROOT=/home/ben/projects/ai4infra
 # PROJECT_ROOT=C:\Users\ben\projects\rpy-quarto-template    # Linux
 # PROJECT_ROOT=$HOME/projects/rpy-quarto-template        # macOS
 # PROJECT_ROOT=$USERPROFILE/projects/rpy-quarto-template # Windows
@@ -13,3 +13,7 @@ LOG_PATH=/var/log/{PROJECT_NAME}
 # LOG_PATH=%USERPROFILE%\AppData\Local\{PROJECT_NAME}\logs # Windows
 
 LOG_LEVEL=DEBUG   # (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=ai4infra
