--- a/.env.example
+++ b/.env.example
@@ -14,21 +14,10 @@ LOG_PATH=/var/log/{PROJECT_NAME}
 
 LOG_LEVEL=DEBUG   # (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 
-SERVICE_PATH=/opt/ai4infra
-# SERVICE_PATH=/opt/{PROJECT_NAME}    # Linux
-# SERVICE_PATH=/usr/local/{PROJECT_NAME}  # macOS
-# SERVICE_PATH=%USERPROFILE%\{PROJECT_NAME}  # Windows (사용자별)
-
-# Memory Settings
-ES_MEM=512m            # [ 512m | 2g] for Elasticsearch
-ES_MEM_LIMIT=1024m     # [1024m | 2g] for Elasticsearch
-KB_MEM_LIMIT=512m      # [ 512m | 2g] for Kibana
-LS_MEM=256m            # [ 256m | 2g] for Logstash
-LS_MEM_LIMIT=512m      # [ 512m | 2g] for Logstash
-KC_HEAP=512m           # [ 512m | 2g] for Keycloak
-KC_MEM_LIMIT=1024m     # [1024m | 2g] for Keycloak
-VT_MEM_LIMIT=256m      # [ 256m | 2g] for Vault
-LD_MEM_LIMIT=256m      # [ 256m | 2g] for OpenLDAP
+BASE_DIR=/opt/ai4infra
+# BASE_DIR=/opt/{PROJECT_NAME}    # Linux
+# BASE_DIR=/usr/local/{PROJECT_NAME}  # macOS
+# BASE_DIR=%USERPROFILE%\{PROJECT_NAME}  # Windows (사용자별)
 
 # Database Settings
 POSTGRES_USER=postgres
