--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,6 @@ BASE_DIR=/opt/ai4infra
 # BASE_DIR=/usr/local/{PROJECT_NAME}  # macOS
 # BASE_DIR=%USERPROFILE%\{PROJECT_NAME}  # Windows (사용자별)
 
-# Database Settings
+# POSTGRES Settings
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=ai4infra
