--- a/config/postgres.yml
+++ b/config/postgres.yml
@@ -2,15 +2,13 @@
 # 파일명: config/postgres.yml
 # 목적: PostgreSQL 데이터베이스 설정
 # 기능: 
-#  - .env에서 SERVICE_PATH/POSTGRES_SERVICE_NAME을 읽어와 설정에 사용
-#  - PG_PORT 지정
+#  - .env에는 민감정보를 저장하고 yml 파일에는 사용자설정을 저장
+#  - 두 정보를 합쳐서 template에 docker-compose.yml에 필요한 .env 파일을 생성토록 함
 # 주의사항
-#  - superuser와 superpassword는 .env에서 관리하며, 민감정보는 코드/설정파일에 직접 노출하지 않습니다.
 # 변경이력
+#  - 2025-11-04: 중복되는 root key를 제거함 (BenKorea)   
 #  - 2025-10-07: 최초 구현 (BenKorea)
 #####################################
-postgres:
-  PG_DATA_DIR: ${BASE_DIR}/postgres/data                   # 데이터 디렉토리
-  PG_PORT: 5432                                            # DB 포트
-
-
+POSTGRES_DB: ai4infra
+PG_DATA_DIR: ${BASE_DIR}/postgres/data                   # 데이터 디렉토리
+PG_PORT: 5432                                            # DB 포트
