--- a/Makefile_project
+++ b/Makefile_project
@@ -9,3 +9,9 @@ ins-vau:
 
 ins-all:
 	$(shell which python) scripts/ai4infra/ai4infra-cli.py install all
+
+init-vault:
+	$(shell which python) scripts/ai4infra/ai4infra-cli.py init-vault
+
+unseal-vault:
+	$(shell which python) scripts/ai4infra/ai4infra-cli.py unseal-vault	
