--- a/Makefile_project
+++ b/Makefile_project
@@ -4,6 +4,9 @@ install-bitwarden:
 install-bitwarden--reset:
 	$(shell which python) scripts/ai4infra/ai4infra-cli.py install bitwarden --reset
 
+backup-bitwarden:
+	$(shell which python) scripts/ai4infra/ai4infra-cli.py backup bitwarden
+
 restore-bitwarden:
 	$(shell which python) scripts/ai4infra/ai4infra-cli.py restore bitwarden
 
