--- a/config/postgres.yml
+++ b/config/postgres.yml
@@ -2,13 +2,25 @@
 # 파일명: config/postgres.yml
 # 목적: PostgreSQL 데이터베이스 설정
 # 기능: 
-#  - .env에는 민감정보를 저장하고 yml 파일에는 사용자설정을 저장
-#  - 두 정보를 합쳐서 template에 docker-compose.yml에 필요한 .env 파일을 생성토록 함
-# 주의사항
+#  - 민감정보 및 BASE_DIR은 프로젝트 .env, config/<service>.yml에서는 아래의 아래의 변수들을 파싱하여 {$BASE_DIR}/service/.env 생성할 때의 설정값으로 사용
+#  - copy_template() 이후 컨테이너 내부의 소유권과 마운트되는 디렉토리의 소유권을 일치시키기 위한 설정
 # 변경이력
-#  - 2025-11-04: 중복되는 root key를 제거함 (BenKorea)   
-#  - 2025-10-07: 최초 구현 (BenKorea)
+#  - 2025-11-22: permissoin 설정 추가 (BenKorea)   
+#  - 2025-11-04: 중복 root key 제거함 (BenKorea)   
 #####################################
+
+permissions:
+  uid: 70
+  gid: 70
+  data_dir_mode: "700"
+  key_mode: "600"
+  cert_mode: "644"
+
 POSTGRES_DB: ai4infra
-PG_DATA_DIR: ${BASE_DIR}/postgres/data                   # 데이터 디렉토리
-PG_PORT: 5432                                            # DB 포트
+
+# BASE_DIR은 .env에서 공급
+PG_DATA_DIR: ${BASE_DIR}/postgres/data
+PG_CERTS_DIR: ${BASE_DIR}/postgres/certs
+PG_CONF_DIR: ${BASE_DIR}/postgres/config
+
+PG_PORT: 5432
