--- a/config/vault.yml
+++ b/config/vault.yml
@@ -5,7 +5,7 @@
 #  - 보안 시크릿 관리 서비스 설정
 #  - 인증서 및 키 관리
 # 변경이력
-#  - 2025-10-06: 최초 구현 (BenKorea)
+#  - 2025-10-06: docker-compose.yml용 변수 설정 (BenKorea)
 #####################################
 
 VAULT_FILE_DIR: ${BASE_DIR}/vault/file   
