--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,6 @@ BASE_DIR=/opt/ai4infra
 # BASE_DIR=/usr/local/{PROJECT_NAME}  # macOS
 # BASE_DIR=%USERPROFILE%\{PROJECT_NAME}  # Windows (사용자별)
 
-# POSTGRES
+# POSTGRES env_vars
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
