--- a/config/postgres.yml
+++ b/config/postgres.yml
@@ -17,6 +17,7 @@ path:
   data: ${BASE_DIR}/postgres/data
   config: ${BASE_DIR}/postgres/config/postgresql.conf
   private_key: ${BASE_DIR}/postgres/certs/private.key
+  csr: ${BASE_DIR}/postgres/certs/request.csr
   service_crt: ${BASE_DIR}/postgres/certs/certificate.crt
   root_ca: ${BASE_DIR}/postgres/certs/rootCA.crt
 
