--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ BASE_DIR=/opt/ai4infra
 # POSTGRES env_vars
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+
+# substitute_env_vars
+BITWARDEN_DOMAIN=bitwarden.ai4infra.internal
