--- a/config/vault.yml
+++ b/config/vault.yml
@@ -26,11 +26,12 @@ path:
 #   key_mode: "600"
 #   cert_mode: "644"
 
-# tls:
-#   enable: true
+tls:
+  enable: true
 
-# env_vars:
-#   POSTGRES_DB: ai4infra
+env_vars:
+  VAULT_ADDR: https://0.0.0.0:8200
+  VAULT_API_ADDR: https://vault:8200
 
 compose_vars:
   PORT: 8200
