--- a/template/postgres/docker-compose.yml
+++ b/template/postgres/docker-compose.yml
@@ -4,29 +4,26 @@ services:
     container_name: ai4infra-postgres
     restart: unless-stopped
 
+    mem_limit: 640m
+
+    ports:
+      - "${PORT:-5432}:5432"
+    networks:
+      - ai4infra
+
     environment:
       - POSTGRES_USER=${POSTGRES_USER:-postgres}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-ai4infra123!}
       - POSTGRES_DB=${POSTGRES_DB:-ai4infra}
 
-    # PostgreSQL은 $PGDATA 안에서 SSL 인증서를 찾기 때문에
-    # data 디렉토리(왼쪽) 내부에 certs를 함께 마운트해야 함
     volumes:
-      # 데이터 파일
       - ${DATA_DIR:-/opt/ai4infra/postgres/data}:/var/lib/postgresql/data
-
 
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 2s
       timeout: 2s
       retries: 10
-
-    ports:
-      - "${PORT:-5432}:5432"
-
-    networks:
-      - ai4infra
 
 networks:
   ai4infra:
