--- a/config/postgres.yml
+++ b/config/postgres.yml
@@ -1,30 +1,36 @@
 ####################################
 # 파일명: config/postgres.yml
-# 목적: PostgreSQL 컨테이너 설정
-# 기능: 
-#  - 민감정보 및 BASE_DIR은 프로젝트 .env, config/<service>.yml에서는 아래의 아래의 변수들을 파싱하여 {$BASE_DIR}/service/.env 생성할 때의 설정값으로 사용
-#  - copy_template() 이후 컨테이너 내부의 소유권과 마운트되는 디렉토리의 소유권을 일치시키기 위한 설정
+# 목적: PostgreSQL 컨테이너 설정 (TLS + 권한 + 경로)
+# 구조 원칙:
+#   - path.directories.* 는 항상 "폴더"
+#   - path.files.* 는 항상 "파일명"
+#   - 인증서 경로는 CERTS_DIR + 파일명으로 자동 생성
 # 변경이력
-#  - 2025-11-25: path 블록으로 구조 통일 (BenKorea)
-#  - 2025-11-22: permissoin 설정 추가 (BenKorea)   
-#  - 2025-11-04: 중복 root key 제거함 (BenKorea)   
+#   - 2025-12-03: directory file 분리 (BenKorea)
+#   - 2025-11-25: path 블록으로 구조 통일 (BenKorea)
+#   - 2025-11-22: permissoin 설정 추가 (BenKorea)   
+#   - 2025-11-04: 중복 root key 제거함 (BenKorea)   
 #####################################
 
 service:
   enable: true
 
 path:
-  data: ${BASE_DIR}/postgres/data
-  config: ${BASE_DIR}/postgres/config/postgresql.conf
-  private_key: ${BASE_DIR}/postgres/certs/private.key
-  csr: ${BASE_DIR}/postgres/certs/request.csr
-  service_crt: ${BASE_DIR}/postgres/certs/certificate.crt
-  root_ca: ${BASE_DIR}/postgres/certs/rootCA.crt
+  directories:
+    data:   "${BASE_DIR}/postgres/data"
+    config: "${BASE_DIR}/postgres/config"
+    certs:  "${BASE_DIR}/postgres/certs"
+
+  files:
+    private_key: "private.key"
+    certificate: "certificate.crt"
+    csr:         "request.csr"
+    root_ca:     "rootCA.crt"
 
 permissions:
   uid: 70
   gid: 70
-  data_dir_mode: "700"
+  data_dir_mode: "700"      # PGDATA
   key_mode: "600"
   cert_mode: "644"
 
@@ -32,7 +38,8 @@ tls:
   enable: true
 
 env_vars:
-  POSTGRES_DB: ai4infra
+  POSTGRES_DB: "ai4infra"
 
 compose_vars:
   PORT: 5432
+  
