--- a/templates/vaultwarden/docker-compose.yml
+++ b/templates/vaultwarden/docker-compose.yml
@@ -1,18 +1,38 @@
-version: '3'
-
 services:
   vaultwarden:
-    image: vaultwarden/server:1.35.1
+    image: vaultwarden/server:1.32.0-alpine
     container_name: ai4infra-vaultwarden
     restart: unless-stopped
-    volumes:
-      - ${BASE_DIR}/vaultwarden/data:/data
-    environment:
-      - WEBSOCKET_ENABLED=true
-      - SIGNUPS_ALLOWED=false  # 보안상 가입 제한 (필요시 true로 변경 후 가입)
-      - INVITATIONS_ALLOWED=false
-      - SHOW_PASSWORD_HINT=false
-      # Postgres 연결 설정 (config/vaultwarden.env에서 주입됨)
-      - DATABASE_URL=${DATABASE_URL}
+
+    mem_limit: ${VAULTWARDEN_MEM_LIMIT:-256m}
+
     ports:
-      - "${PORT}:80"
+      # 직접 접속 필요 시 사용 (보통은 주석 처리하고 Nginx만 사용)
+      - "${VAULTWARDEN_PORT:-8080}:80"
+
+    networks:
+      - ai4infra
+
+    volumes:
+      - /opt/ai4infra/vaultwarden/data:/data
+
+    environment:
+      # 설정 파일(config.yml)에서 주입된 변수들 사용
+      - DOMAIN=${DOMAIN}
+      - SIGNUPS_ALLOWED=${SIGNUPS_ALLOWED:-false}
+      - INVITATIONS_ALLOWED=${INVITATIONS_ALLOWED:-false}
+      - ROCKET_ADDRESS=0.0.0.0
+      - ROCKET_PORT=80
+      
+      # Database Connection (Postgres)
+      # ai4infra-postgres 컨테이너의 5432 포트로 접속
+      # 초기 설치 시 DB 생성 필요 (create database vaultwarden)
+      - DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@ai4infra-postgres:5432/vaultwarden}
+
+      # Logging
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+
+networks:
+  ai4infra:
+    external: true
+    name: ai4infra
