feat: Implement 3-Tier PACS Architecture (Mock-Raw-Pseudo)
- Add multi-instance Orthanc support with isolated databases
- Implement Mock PACS (병원 모사): orthanc_mock, port 4243
- Implement Raw PACS (원시 데이터): orthanc_raw, port 4244
- Implement Pseudo PACS (가명화): orthanc_pseudo, port 4245
- Update custom entrypoint with dynamic DB name substitution
- Add Nginx configurations for all PACS instances
- Improve documentation with workflow diagrams
- Fix environment variable handling in ai4infra-cli.py

--- a/config/orthanc-mock.yml
+++ b/config/orthanc-mock.yml
@@ -5,11 +5,11 @@ env_vars:
   # Entrypoint Helpers
   ORTHANC_ADMIN_PASSWORD: "${ORTHANC_ADMIN_PASSWORD}"
   ORTHANC_DB_PASSWORD: "${ORTHANC_DB_PASSWORD}"
-  ORTHANC_AET: "${ORTHANC_AET}"
-  ORTHANC_DB_NAME: "${ORTHANC_DB_NAME}"
+  ORTHANC_AET: "MOCK_PACS"
+  ORTHANC_DB_NAME: "orthanc_mock"
 
   # General
-  ORTHANC__NAME: "AI4INFRA Orthanc"
+  ORTHANC__NAME: "Hospital Mock PACS"
   # JSON Format for Users: { "username": "password" }
   ORTHANC__REGISTERED_USERS: |
     { "admin": "${ORTHANC_ADMIN_PASSWORD}" }
@@ -19,13 +19,13 @@ env_vars:
   ORTHANC__POSTGRESQL__ENABLE_STORAGE: "false" # Use Disk for large files
   ORTHANC__POSTGRESQL__HOST: "ai4infra-postgres"
   ORTHANC__POSTGRESQL__PORT: "5432"
-  ORTHANC__POSTGRESQL__DATABASE: "orthanc"
+  ORTHANC__POSTGRESQL__DATABASE: "orthanc_mock"
   ORTHANC__POSTGRESQL__USERNAME: "orthanc"
   ORTHANC__POSTGRESQL__PASSWORD: "${ORTHANC_DB_PASSWORD}"
 
   # Network
-  ORTHANC__DICOM_PORT: "4242"
-  ORTHANC__HTTP_PORT: "8042"
+  ORTHANC__DICOM_PORT: "4243"
+  ORTHANC__HTTP_PORT: "8043"
   
   # Encoding (Korean Support)
   ORTHANC__DEFAULT_ENCODING: "Utf8"
@@ -34,6 +34,6 @@ env_vars:
   ORTHANC__OHIF__DATA_SOURCE: "dicom-web"
   
 compose_vars:
-  ORTHANC_HTTP_PORT: "8042"
-  ORTHANC_DICOM_PORT: "4242"
+  ORTHANC_HTTP_PORT: "8043"
+  ORTHANC_DICOM_PORT: "4243"
   ORTHANC_MEM_LIMIT: "1g"
