--- a/config/orthanc-raw.yml
+++ b/config/orthanc-raw.yml
@@ -5,11 +5,11 @@ env_vars:
   # Entrypoint Helpers
   ORTHANC_ADMIN_PASSWORD: "${ORTHANC_ADMIN_PASSWORD}"
   ORTHANC_DB_PASSWORD: "${ORTHANC_DB_PASSWORD}"
-  ORTHANC_AET: "${ORTHANC_AET}"
-  ORTHANC_DB_NAME: "${ORTHANC_DB_NAME}"
+  ORTHANC_AET: "RAW_PACS"
+  ORTHANC_DB_NAME: "orthanc_raw"
 
   # General
-  ORTHANC__NAME: "AI4INFRA Orthanc"
+  ORTHANC__NAME: "Raw PACS"
   # JSON Format for Users: { "username": "password" }
   ORTHANC__REGISTERED_USERS: |
     { "admin": "${ORTHANC_ADMIN_PASSWORD}" }
@@ -19,13 +19,13 @@ env_vars:
   ORTHANC__POSTGRESQL__ENABLE_STORAGE: "false" # Use Disk for large files
   ORTHANC__POSTGRESQL__HOST: "ai4infra-postgres"
   ORTHANC__POSTGRESQL__PORT: "5432"
-  ORTHANC__POSTGRESQL__DATABASE: "orthanc"
+  ORTHANC__POSTGRESQL__DATABASE: "orthanc_raw"
   ORTHANC__POSTGRESQL__USERNAME: "orthanc"
   ORTHANC__POSTGRESQL__PASSWORD: "${ORTHANC_DB_PASSWORD}"
 
   # Network
-  ORTHANC__DICOM_PORT: "4242"
-  ORTHANC__HTTP_PORT: "8042"
+  ORTHANC__DICOM_PORT: "4244"
+  ORTHANC__HTTP_PORT: "8044"
   
   # Encoding (Korean Support)
   ORTHANC__DEFAULT_ENCODING: "Utf8"
@@ -34,6 +34,6 @@ env_vars:
   ORTHANC__OHIF__DATA_SOURCE: "dicom-web"
   
 compose_vars:
-  ORTHANC_HTTP_PORT: "8042"
-  ORTHANC_DICOM_PORT: "4242"
+  ORTHANC_HTTP_PORT: "8044"
+  ORTHANC_DICOM_PORT: "4244"
   ORTHANC_MEM_LIMIT: "1g"
