--- a/templates/nginx/config/conf.d/default.conf
+++ b/templates/nginx/config/conf.d/default.conf
@@ -9,6 +9,18 @@ server {
         return 200 'healthy\n';
     }
 
+    # [SEC-04] RBAC Test Endpoint
+    location /admin {
+        default_type text/plain;
+        access_by_lua_block {
+            require("oidc_auth").validate()
+            require("oidc_auth").require_role("admin")
+        }
+        content_by_lua_block {
+            ngx.say("Welcome, Admin! (RBAC Verified)")
+        }
+    }
+
     # 기본적으로 HTTPS로 리다이렉트 (운영 시 주석 해제)
     # location / {
     #     return 301 https://$host$request_uri;
@@ -16,18 +28,47 @@ server {
 }
 
 # SSL 설정 예시 (인증서 발급 후 활성화)
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     server_name  localhost;
-#
-#     ssl_certificate     /etc/nginx/certs/certificate.crt;
-#     ssl_certificate_key /etc/nginx/certs/private.key;
-#     ssl_protocols       TLSv1.2 TLSv1.3;
-#     ssl_ciphers         HIGH:!aNULL:!MD5;
-#
-#     location / {
-#         root   /usr/share/nginx/html;
-#         index  index.html index.htm;
-#     }
-# }
+# SSL 설정 (인증서 발급 후 활성화)
+server {
+    listen 443 ssl; # http2 제거 (OpenResty 구버전 호환)
+    listen [::]:443 ssl;
+    server_name  localhost;
+
+    ssl_certificate     /etc/nginx/certs/certificate.crt;
+    ssl_certificate_key /etc/nginx/certs/private.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+
+    location / {
+        # [Security] Default Deny / OIDC Enforce
+        access_by_lua_block {
+             require("oidc_auth").validate()
+        }
+        root   /usr/local/openresty/nginx/html;
+        index  index.html index.htm;
+    }
+    
+    # [SEC-04] RBAC Test Endpoint
+    location /admin {
+        default_type text/plain;
+        access_by_lua_block {
+            require("oidc_auth").validate()
+            require("oidc_auth").require_role("admin")
+        }
+        content_by_lua_block {
+            ngx.say("Welcome, Admin! (RBAC Verified)")
+        }
+    }
+}
+
+# [Internal] Keycloak Proxy for JWKS/Token resolution
+server {
+    listen 80;
+    server_name auth.ai4infra.internal;
+    
+    location / {
+        proxy_pass http://ai4infra-keycloak:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
