--- a/templates/nginx/docker-compose.yml
+++ b/templates/nginx/docker-compose.yml
@@ -1,8 +1,7 @@
-version: "3.9"
-
 services:
   nginx:
-    image: nginx:1.24-alpine
+    build: .
+    image: ai4infra/nginx:custom
     container_name: ai4infra-nginx
     restart: unless-stopped
 
@@ -13,12 +12,40 @@ services:
       - "${HTTP_PORT:-80}:80"
       - "${HTTPS_PORT:-443}:443"
 
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+    environment:
+      - OIDC_PROVIDER=${OIDC_PROVIDER}
+      - OIDC_CLIENT_ID=${OIDC_CLIENT_ID}
+      - OIDC_CLIENT_SECRET=${OIDC_CLIENT_SECRET}
+      - OIDC_COOKIE_SECRET=${OIDC_COOKIE_SECRET}
+      # Nginx Env Directives need these to be present in container env
+
+    extra_hosts:
+      - "auth.ai4infra.internal:127.0.0.1"
+      - "ai4infra.internal:127.0.0.1"
+
+    # [Security] Immutable Infrastructure (Read-Only)
+    read_only: true
+    tmpfs:
+      - /tmp
+      - /var/run
+      - /var/cache/nginx
+
     networks:
       - ai4infra
 
     volumes:
-      # 설정 파일 마운트
-      - ${CONFIG_DIR:-/opt/ai4infra/nginx/config}/nginx.conf:/etc/nginx/nginx.conf:ro
+      # 설정 파일 마운트 (OpenResty 경로)
+      - ${CONFIG_DIR:-/opt/ai4infra/nginx/config}/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf:ro
+      - ${CONFIG_DIR:-/opt/ai4infra/nginx/config}/proxy.conf:/usr/local/openresty/nginx/conf/proxy.conf:ro
+      # [Security] WAF Configs
+      - ${CONFIG_DIR:-/opt/ai4infra/nginx/config}/modsecurity.conf:/etc/nginx/modsecurity/modsecurity.conf:ro
+      - ${CONFIG_DIR:-/opt/ai4infra/nginx/config}/main.conf:/etc/nginx/modsecurity/main.conf:ro
       - ${CONFIG_DIR:-/opt/ai4infra/nginx/config}/conf.d:/etc/nginx/conf.d:ro
 
       # 인증서 마운트 (모든 서비스의 인증서를 모아서 관리하거나, Gateway용 전용 인증서 사용)
@@ -30,7 +57,7 @@ services:
       - ${LOGS_DIR:-/opt/ai4infra/nginx/logs}:/var/log/nginx
 
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
+      test: [ "CMD", "curl", "-f", "http://localhost:80/health" ]
       interval: 30s
       timeout: 3s
       retries: 3
